...
        actions: [
          IconButton(
            onPressed: () {
              context.go('/TagsEditScreen/TagsAliasesEditScreen');
            },
            icon: const Icon(Icons.add_comment_outlined),
            tooltip: "Edit alias",
          ),
          IconButton(
            onPressed: () => ref.read(tagsProvider.notifier).addTag(),
            icon: const Icon(Icons.add),
            tooltip: "Add new tag",
          )
...
