enum LoggableAction {
  created,
  done,
  undone,
  deleted,
  archived,
}
